[gd_scene load_steps=13 format=2]

[ext_resource path="res://spoo_world/assets/img/fondo_main.png" type="Texture" id=1]
[ext_resource path="res://spoo_world/assets/icon/button_bg.png" type="Texture" id=2]
[ext_resource path="res://spoo_world/world/Admin/Login.gd" type="Script" id=3]
[ext_resource path="res://spoo_world/assets/icon/arrow_back50.png" type="Texture" id=4]
[ext_resource path="res://spoo_world/assets/typography/Lemonade Bold Demo.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=5]
size = 25
extra_spacing_char = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 80
extra_spacing_char = 5
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 30
extra_spacing_char = 2
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 50, 70 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 50, 70 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 50, 70 )

[sub_resource type="DynamicFont" id=7]
size = 30
extra_spacing_char = 2
font_data = ExtResource( 5 )

[node name="Login" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 400 )
scale = Vector2( 1.06667, 0.888889 )
texture = ExtResource( 1 )

[node name="Panel" type="ColorRect" parent="."]
margin_left = 305.0
margin_top = 148.0
margin_right = 985.0
margin_bottom = 684.0
size_flags_stretch_ratio = 0.0
color = Color( 0.14902, 0.14902, 0.14902, 0.972549 )

[node name="JUGAR" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -86.0
margin_top = 411.0
margin_right = 82.0
margin_bottom = 480.0
custom_colors/font_color = Color( 0.027451, 0.027451, 0.027451, 1 )
custom_fonts/font = SubResource( 5 )
text = "INGRESAR"
icon = ExtResource( 2 )
flat = true
icon_align = 1
expand_icon = true

[node name="Titulo" type="Label" parent="Panel"]
margin_left = 156.0
margin_top = 47.0
margin_right = 568.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 4 )
text = "SPOO GAME"

[node name="Password" type="Label" parent="Panel"]
margin_left = 182.0
margin_top = 307.0
margin_right = 322.0
margin_bottom = 331.0
custom_fonts/font = SubResource( 6 )
text = "Password:"

[node name="Password2" type="TextEdit" parent="Panel/Password"]
margin_top = 43.0
margin_right = 326.0
margin_bottom = 83.0
custom_constants/line_spacing = 8
custom_constants/completion_lines = -3

[node name="back" type="Button" parent="."]
margin_left = 23.0
margin_top = 20.0
margin_right = 86.0
margin_bottom = 85.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="Usuario2" type="Label" parent="."]
margin_left = 491.0
margin_top = 329.0
margin_right = 607.0
margin_bottom = 369.0
custom_fonts/font = SubResource( 7 )
text = "Usuario:"

[node name="Usuario" type="TextEdit" parent="Usuario2"]
margin_left = -4.0
margin_top = 44.0
margin_right = 318.0
margin_bottom = 84.0
custom_constants/line_spacing = 8
custom_constants/completion_lines = -3

[connection signal="pressed" from="Panel/JUGAR" to="." method="_on_JUGAR_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
